Tui fix race conditioning & Add queue objects